# minecraft-rust

./: .dockerignore  .gitignore  CHANGELOG.txt  Cargo.toml  Dockerfile  Justfile  LICENSE.txt  Makefile  README.md  README.txt  atlas.py  build-if-needed.sh  build.py  build.sh  build_release.py  check.sh  dev.sh  generate_release.py  get_source.py  install-cargo-watch-if-needed.sh  make-if-needed.sh  release-build.sh  release1.sh  run  run-client-1.sh  run-client-2.sh  run-client-x.sh  run-server.sh  run.bat  run.sh  run1.sh  run2.sh  shell.nix  watch-build.sh  watch-server.sh  watch.sh
.cargo/: config.toml
.github/workflows/: ci.yml  dev-build.yml  docker-image.yml
3d-c/: Makefile  main.c  prog
client/: .gitignore  Cargo.toml  run.sh
client/src/: constants.rs  game.rs  main.rs  menu.rs  splash_screen.rs
client/src/camera/: controller.rs  mod.rs  spawn.rs
client/src/hud/: chat.rs  hotbar.rs  mod.rs
client/src/hud/debug/: blocks.rs  setup.rs
client/src/input/: data.rs  keyboard.rs  mod.rs  mouse.rs
client/src/lighting/: celestial.rs
client/src/menu/: controls.rs  game_loading_screen.rs  mod.rs  multi.rs  settings.rs  solo.rs
client/src/network/: api.rs  chat.rs  cleanup.rs  inputs.rs  mod.rs  player.rs  save.rs  setup.rs  world.rs
client/src/player/: controller.rs  interactions.rs  inventory.rs  mod.rs  spawn.rs
client/src/ui/: chat.rs  hotbar.rs  mod.rs  pause.rs  reticle.rs
client/src/ui/debug/: blocks.rs  chunks.rs  coords.rs  loaded_stats.rs  mod.rs  setup.rs  targeted_block.rs
client/src/ui/inventory/: display.rs  inv.rs  items.rs  mod.rs  setup.rs
client/src/world/: data.rs  generation.rs  load_from_file.rs  materials.rs  meshing.rs  mod.rs  render.rs  render_distance.rs  save.rs  time.rs  utils.rs  voxel.rs
cube-bevy/: Cargo.toml
cube-bevy/src/: keyboard.rs  main.rs  player.rs  world.rs
data/blocks/: bedrock.ron  dirt.ron  grass.ron  stone.ron
data/items/: bedrock.ron  dirt.ron  grass.ron  stone.ron
docs/: liens.txt  ressources.txt
docs/archives/cube-c/: main.c  prog
docs/eztaah/: notes-rust-book.sd
docs/eztaah/tuto-bevy/: notes-ep1.sd
eztaah/pong-bevy/src/: main.rs
pong-bevy/: Cargo.toml
rust-3d/: Cargo.toml
rust-3d/src/: main.rs
scripts/: generate_release.py  install-dependencies.sh  run-2-release.sh  run-release1.sh  run-server-release.sh  watch-server.sh  watch1.sh
server/: Cargo.toml  watch.sh
server/src/: chat.rs  dispatcher.rs  init.rs  lib.rs  main.rs  player.rs  resources.rs  time.rs  world.rs
server/src/systems/: events.rs  init.rs  mod.rs
server/src/world/: broadcast.rs  data.rs  generation.rs  load_from_file.rs  mod.rs  save.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol.rs
shared/src/data/: world.rs
shared/src/messages/: auth.rs  chat.rs  chat_message.rs  chat_messages.rs  mod.rs  player.rs  system.rs  world.rs
shared/src/world/: blocks.rs  data.rs  items.rs  mod.rs  utils.rs
src/: block_debug_wireframe.rs  camera.rs  constants.rs  exit.rs  fps_counter.rs  items.rs  keyboard.rs  main.rs  materials.rs  player.rs  utils.rs  world.rs
src/camera/: controller.rs  cursor.rs  mod.rs
src/chunk_debug_ghost/: ghost.rs  mod.rs
src/debug/: chunks.rs  mod.rs
src/hud/: block.rs  coords.rs  debug.rs  fps.rs  inventory.rs  loaded_stats.rs  mod.rs  reticle.rs  ui.rs
src/hud/debug/: mod.rs  setup.rs
src/input/: keyboard.rs  mouse.rs
src/lighting/: celestial.rs  mod.rs
src/player/: controller.rs  interactions.rs  inventory.rs  mod.rs  spawn.rs
src/protocol/: connection.rs  mod.rs  packet_io.rs
src/ui/: inventory.rs  mod.rs
src/ui/inventory/: display.rs  inv.rs  items.rs  mod.rs  setup.rs
src/world/: generation.rs  mod.rs
website/: index.html
