[package]
name = "rust-32"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
lazy_static = "1.5.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3