[package]
name = "minecraft-rust-server"
version = "0.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy_app = { version = "0.14", default-features=false }
bevy_core = { version = "0.14", default-features=false }
bevy_ecs = { version = "0.14", default-features=false }
bevy_log = { version = "0.14", default-features=false }
bevy = "0.14.2"
bevy_renet = { version = "0.0.12", features = ["serde", "transport"] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.210", features = ["derive"] }

