[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy_app = { version = "0.14", default-features=false }
bevy_core = { version = "0.14", default-features=false }
bevy_ecs = { version = "0.14", default-features=false }
bevy_log = { version = "0.14", default-features=false }
bevy = "0.14.2"
bevy_renet = { version = "0.0.12", features = ["serde", "transport"] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
noise = "0.9.0"

# Define the library target
[lib]
name = "server"
path = "src/lib.rs"

# Define the binary target
[[bin]]
name = "server"
path = "src/main.rs"
